``` No code changes made. only change in index.html ```

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         
         <!-- New Project Cards -->
         <div class="project-card">
-            <img src="/assets/images/web-dev.png" alt="Web Development project image" class="project-image">
+            <img src="/assets/images/web-dev (2).png" alt="Web Development project image" class="project-image">
             <h3>Web Development</h3>
             <p>Real-time sentiment analysis for social media feeds</p>
             <div class="project-tech">
@@ -167,7 +167,7 @@
         </div>
         
         <div class="project-card">
-            <img src="/assets/images/game-dev.png" alt="Game Development project image" class="project-image">
+            <img src="/assets/images/game-dev (2).png" alt="Game Development project image" class="project-image">
             <h3>Game Development</h3>
             <p>Smart home automation with machine learning</p>
             <div class="project-tech">
