enhanced the game dev page

--- a/projects/game-development.html
+++ b/projects/game-development.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Genrative AI Game Development | Mirza Rameez</title>
+  <title>Game Development | Mirza Rameez</title>
   <link rel="stylesheet" href="../css/project-styles.css">
   <link rel="stylesheet" href="../css/theme-variables.css">
   <link rel="icon" type="image/png" href="../assets/images/logo.png">
@@ -47,16 +47,22 @@
   <section class="project-hero">
     <div class="container">
       <div class="breadcrumbs">
-        <a href="../index.html">Home</a> / <a href="../index.html#projects">Projects</a> / <span>Space Invaders-inspired Game</span>
+        <a href="../index.html">Home</a> / <a href="../index.html#projects">Projects</a> / <span>Game Development</span>
       </div>
-      <h1>Space Invaders-inspired Game</h1>
+      <h1>Genrative AI Game Development</h1>
       <div class="project-intro">
-        <p>A modernized Space Invaders-inspired game using Python and Pygame with Generative AI assistance, featuring smooth controls, dynamic effects, and adaptive difficulty.</p>
+        <p>Modernized Space Invaders-inspired game using Python and Pygame</p>
         <div class="tech-tags">
           <span>Python</span>
           <span>Pygame</span>
+          <span>Collision Detection</span>
+          <span>Particle Physics</span>
           <span>Sprite Animation</span>
+          <span>Game State management</span>
+          <span>High Score System</span>
+          <span>Menu Design</span>
           <span>Generative AI</span>
+          <span>Game Audio</span>
         </div>
       </div>
     </div>
@@ -68,10 +74,11 @@
       <div class="overview-grid">
         <div class="overview-content">
           <h2>Project Overview</h2>
-          <p>I developed a modernized Space Invaders-inspired game using Python and Pygame with the assistance of Generative AI. This shooter features smooth player controls, progressively challenging enemies, dynamic particle effects, and adaptive difficulty scaling. The game includes a complete menu system with settings controls, persistent high scores, and an immersive audio experience with volume management. Through careful object-oriented design enhanced by AI collaboration, I created an engaging arcade experience with intuitive controls, visual feedback systems, and smooth performance.</p>
+          <p>I created a modernized Space Invaders-inspired game using Python and Pygame, with the help of Generative AI. This shooter features fluid player controls, increasingly harder enemies, dynamic particle effects, and customizable difficulty scaling. The game features a fully functional menu system with settings controls, persistent high scores, and an immersive audio experience with volume control.</p>
+          <p>I designed a compelling arcade experience with intuitive controls, visual feedback systems, and smooth performance thanks to comprehensive object-oriented design and AI collaboration. The project displays my ability to apply core game development principles to modern interface design and gameplay mechanisms.</p>
         </div>
         <div class="overview-image">
-          <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?auto=format&fit=crop&w=1974&q=80" alt="Space Invaders Game Concept">
+          <img src="/assets/images/gamedev/gameplay.png" alt="Space Invaders Game Concept">
         </div>
       </div>
     </div>
@@ -88,18 +95,18 @@
       <div class="tab-content active" id="images">
         <div class="image-gallery">
           <div class="gallery-item">
-            <img src="https://images.unsplash.com/photo-1616499370238-9cf0d7a1e41e?auto=format&fit=crop&w=2070&q=80" alt="Gameplay Screenshot 1">
+            <img src="/assets/images/gamedev/gameplay.png" alt="Gameplay Screenshot 1">
             <div class="image-caption">Intense gameplay with multiple enemies and particle effects</div>
           </div>
           <div class="gallery-item">
-            <img src="https://images.unsplash.com/photo-1620421680010-0766ff230392?auto=format&fit=crop&w=2070&q=80" alt="Gameplay Screenshot 2">
+            <img src="/assets/images/gamedev/menu.png" alt="Gameplay Screenshot 2">
             <div class="image-caption">Menu system with settings and high score display</div>
           </div>
         </div>
       </div>
       <div class="tab-content" id="video">
         <div class="video-demo">
-          <iframe width="800" height="450" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=demo" title="Space Invaders Game Demo" frameborder="0" allowfullscreen></iframe>
+          <iframe width="800" height="450" src="https://www.youtube.com/embed/omVCStXQiYs?si=EAw3UrTAWALkM0e6" title="Space Invaders Game Demo" frameborder="0" allowfullscreen></iframe>
           <p class="video-caption">Demo video showcasing gameplay mechanics and features.</p>
         </div>
       </div>
@@ -227,14 +234,23 @@ class Player(pygame.sprite.Sprite):
     </div>
   </section>
 
+  <!-- Call to Action -->
+<section class="call-to-action">
+  <div class="container">
+      <h2>Ready to Collaborate?</h2>
+      <p><strong>Ready to level up your game development project?</strong> I specialize in developing compelling game experiences using clean, maintainable programming and simple player controls.</p>
+      <a href="../index.html#contact" class="cta-button">Get in Touch</a>
+  </div>
+</section>
+
   <!-- Footer -->
   <footer>
     <div class="container">
       <div class="footer-content">
         <div class="social-links">
-          <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/mirza-rameez/" class="social-link"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/MirzaRameez" class="social-link"><i class="fab fa-github"></i></a>
+          <a href="mailto:mirzarameez862@gmail.com" class="social-link"><i  class="fa-solid fa-envelope"></i></a>
         </div>
       </div>
       <div class="footer-bottom">
