--- a/projects/game-development.html
+++ b/projects/game-development.html
@@ -49,16 +49,16 @@
       <div class="breadcrumbs">
         <a href="../index.html">Home</a> / <a href="../index.html#projects">Projects</a> / <span>Game Development</span>
       </div>
-      <h1>Genrative AI Game Development</h1>
+      <h1>Generative AI Game Development</h1>
       <div class="project-intro">
-        <p>Modernized Space Invaders-inspired game using Python and Pygame</p>
+        <p>A modernized Space Invaders-inspired game developed using Python and Pygame</p>
         <div class="tech-tags">
           <span>Python</span>
           <span>Pygame</span>
           <span>Collision Detection</span>
           <span>Particle Physics</span>
           <span>Sprite Animation</span>
-          <span>Game State management</span>
+          <span>Game State Management</span>
           <span>High Score System</span>
           <span>Menu Design</span>
           <span>Generative AI</span>
@@ -74,8 +74,8 @@
       <div class="overview-grid">
         <div class="overview-content">
           <h2>Project Overview</h2>
-          <p>I created a modernized Space Invaders-inspired game using Python and Pygame, with the help of Generative AI. This shooter features fluid player controls, increasingly harder enemies, dynamic particle effects, and customizable difficulty scaling. The game features a fully functional menu system with settings controls, persistent high scores, and an immersive audio experience with volume control.</p>
-          <p>I designed a compelling arcade experience with intuitive controls, visual feedback systems, and smooth performance thanks to comprehensive object-oriented design and AI collaboration. The project displays my ability to apply core game development principles to modern interface design and gameplay mechanisms.</p>
+          <p>I developed a modernized Space Invaders-inspired game using Python and Pygame, significantly aided by Generative AI. This shooter features fluid player controls, progressively harder enemies, dynamic particle effects, and customizable difficulty scaling. The game includes a fully functional menu system with settings, persistent high scores, and an immersive audio experience with volume control.</p>
+          <p>My design focused on delivering a compelling arcade experience, featuring intuitive controls, robust visual feedback systems, and smooth performance. This was achieved through comprehensive object-oriented design and effective collaboration with AI tools. The project demonstrates my ability to apply core game development principles to modern interface design and gameplay mechanisms.</p>
         </div>
         <div class="overview-image">
           <img src="/assets/images/gamedev/gameplay.png" alt="Space Invaders Game Concept">
